# vtinker

./: .gitignore  LICENSE  README.ar.md  README.kz.md  README.md  README.ru.md  pyproject.toml  vtinker.example.json
.github/assets/: logo-prompt.txt
benchmarks/minidb/: config.json  epic.md  run.sh
tests/: test_checks.py  test_config.py  test_doom.py  test_gitignore.py  test_opencode.py  test_parse.py  test_prompts.py
vtinker/: __main__.py  beads.py  checks.py  cli.py  colors.py  config.py  doom.py  gitignore.py  opencode.py  orchestrator.py  parse.py  prompts.py
vtinker/web/: __init__.py  app.py  monitor.py
vtinker/web/templates/: base.html  dashboard.html  new_run.html  run_detail.html  task_detail.html
