[project]
name = "vtinker"
version = "0.1.0"
description = "Autonomous coding agent orchestrator on top of OpenCode + Beads"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Igor Zygin"}]
readme = "README.md"

[project.urls]
Repository = "https://github.com/igorzygin/vtinker"

[project.scripts]
vtinker = "vtinker.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
